CMAKE_MINIMUM_REQUIRED(VERSION 3.27)
PROJECT(RSP
	DESCRIPTION "Graph Library in C++"
	VERSION 0.1
	LANGUAGES CXX
)

SET(CMAKE_CXX_STANDARD 23)

SET(rsp_sources
	include/IGraph.h
	include/GraphAdj.h
	include/GraphBuilder.h
)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${rsp_sources})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

ADD_EXECUTABLE(example targets/example.cc)
TARGET_LINK_LIBRARIES(example PRIVATE ${PROJECT_NAME})

# ADD_SUBDIRECTORY(external)
# ADD_SUBDIRECTORY(targets/example)